src/test/ui/typeck/issue-90101.stderr
error[E0277]: the trait bound `Cow<'_, str>: Into<PathBuf>` is not satisfied
  --> $DIR/issue-90101.rs:6:10
   |
LL |     func(Path::new("hello").to_path_buf().to_string_lossy(), "world")
   |     ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Into<PathBuf>` is not implemented for `Cow<'_, str>`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `func`
  --> $DIR/issue-90101.rs:3:20
   |
LL | fn func(path: impl Into<PathBuf>, code: impl Into<String>) {}
   |                    ^^^^^^^^^^^^^ required by this bound in `func`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
